--- a/.github/workflows/openbsd.yml
+++ b/.github/workflows/openbsd.yml
@@ -26,4 +26,4 @@ jobs:
             touch aaa
 
       - run: printf '%s\n' "$VAGRANT_CWD"
-      - run: scp -i $VAGRANT_CWD/.vagrant/machines/default/virtualbox/private_key -o StrictHostKeyChecking=no -r -P 2222 vagrant@127.0.0.1:/home/vagrant/leleliu008/github-actions-vagrant/aaa .
+      - run: scp -i $VAGRANT_CWD/.vagrant/machines/default/virtualbox/private_key -o StrictHostKeyChecking=no -r -P 2222 vagrant@127.0.0.1:/home/vagrant/${GITHUB_REPOSITORY}/aaa .
