Leverage box-configs attribute to add support for nested virt

--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -27,6 +27,10 @@ jobs:
         with:
           mem: 2048
           box: generic/alpine${{ matrix.version }}
+          box-configs: |
+            config.vm.provider "virtualbox" do |vb|
+              vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
+            end
           log: debug
           run: |
             run id
